@@ -5,6 +5,7 @@
 = trunk =
 * BUGFIX [Only one testimonial displaying](http://wordpress.org/support/topic/only-one-testimonial-displaying)
 * Enable quotes and join for IE7 - Thank you [SFMichael](http://wordpress.org/support/topic/ie-7-quotes-fix)
+* Revise settings_link handling
 * Update Premium link
 
 = 2.10.2 =
